added auth and api structure from custodian simulator to stubcustodians
