# Apps/StubCustodians/src/SUI.StubCustodians.API/Controllers/FetchController.cs
@@ -12,33 +12,11 @@ namespace SUI.StubCustodians.API.Controllers;
 [ApiController]
 [Route("api/v{version:apiVersion}/[controller]")]
 [ApiVersion("1.0")]
-public class FetchController : ControllerBase
+public class FetchController(ILogger<RecordsController> logger, IRecordService recordService)
+    : ControllerBase
 {
-    private readonly ILogger<FetchController> _logger;
-    private readonly IRecordServiceHandler<PersonalDetailsRecordV1> _personalDetailsRecordHandler;
-    private readonly IRecordServiceHandler<ChildrensServicesDetailsRecordV1> _childrensServicesDetailsRecordHandler;
-    private readonly IRecordServiceHandler<HealthDataRecordV1> _healthDataRecordHandler;
-    private readonly IRecordServiceHandler<EducationDetailsRecordV1> _educationDetailsRecordHandler;
-    private readonly IRecordServiceHandler<CrimeDataRecordV1> _crimeDataRecordHandler;
-
-    public FetchController(
-        ILogger<FetchController> logger,
-        IRecordServiceHandler<PersonalDetailsRecordV1> personalDetailsRecordHandler,
-        IRecordServiceHandler<ChildrensServicesDetailsRecordV1> childrensServicesDetailsRecordHandler,
-        IRecordServiceHandler<HealthDataRecordV1> healthDataRecordHandler,
-        IRecordServiceHandler<EducationDetailsRecordV1> educationDetailsRecordHandler,
-        IRecordServiceHandler<CrimeDataRecordV1> crimeDataRecordHandler
-    )
-    {
-        _logger = logger;
-        _personalDetailsRecordHandler = personalDetailsRecordHandler;
-        _childrensServicesDetailsRecordHandler = childrensServicesDetailsRecordHandler;
-        _healthDataRecordHandler = healthDataRecordHandler;
-        _educationDetailsRecordHandler = educationDetailsRecordHandler;
-        _crimeDataRecordHandler = crimeDataRecordHandler;
-    }
-
     [HttpGet("{providerSystemId}/{recordType}/{sui}")]
+    [RequiredScopes("fetch-record.read")]
     [ProducesResponseType(typeof(RecordEnvelope<SuiRecord>), StatusCodes.Status200OK)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
     [ProducesResponseType(typeof(FailureInfo), StatusCodes.Status400BadRequest)]
@@ -48,37 +26,84 @@ public class FetchController : ControllerBase
         [FromRoute] string providerSystemId
     )
     {
-        _logger.LogInformation("Getting record starting, for sui:'{Sui}'", sui);
+        return await ActionResult(sui, recordType, providerSystemId);
+    }
+
+    [HttpGet("{providerSystemId}/{sui}")]
+    [RequiredScopes("fetch-record.read")]
+    [ProducesResponseType(typeof(RecordEnvelope<SuiRecord>), StatusCodes.Status200OK)]
+    [ProducesResponseType(StatusCodes.Status404NotFound)]
+    [ProducesResponseType(typeof(FailureInfo), StatusCodes.Status400BadRequest)]
+    public async Task<IActionResult> GetRecord2(
+        [FromRoute] string sui,
+        [FromRoute] string providerSystemId,
+        [FromQuery] string? type
+    )
+    {
+        return await ActionResult(sui, type, providerSystemId);
+    }
+
+    private async Task<IActionResult> ActionResult(
+        string sui,
+        string? recordType,
+        string providerSystemId
+    )
+    {
+        logger.LogInformation("Getting record starting, for sui:'{Sui}'", sui);
 
         switch (recordType)
         {
-            case nameof(PersonalDetailsRecord):
-                var result = await _personalDetailsRecordHandler.GetRecord(sui, providerSystemId);
-                _logger.LogInformation("Getting record ended, for sui:'{Sui}'", sui);
-                return result.ToActionResult();
-
-            case nameof(ChildrensServicesDetailsRecord):
-                var result2 = await _childrensServicesDetailsRecordHandler.GetRecord(
+            case "education.details":
+                var educationDetailsResult = await recordService.GetRecord<EducationDetailsRecord>(
                     sui,
                     providerSystemId
                 );
-                _logger.LogInformation("Getting record ended, for sui:'{Sui}'", sui);
-                return result2.ToActionResult();
-
-            case nameof(HealthDataRecord):
-                var result3 = await _healthDataRecordHandler.GetRecord(sui, providerSystemId);
-                _logger.LogInformation("Getting record ended, for sui:'{Sui}'", sui);
-                return result3.ToActionResult();
-
-            case nameof(CrimeDataRecord):
-                var result4 = await _crimeDataRecordHandler.GetRecord(sui, providerSystemId);
-                _logger.LogInformation("Getting record ended, for sui:'{Sui}'", sui);
-                return result4.ToActionResult();
-
-            case nameof(EducationDetailsRecord):
-                var result5 = await _educationDetailsRecordHandler.GetRecord(sui, providerSystemId);
-                _logger.LogInformation("Getting record ended, for sui:'{Sui}'", sui);
-                return result5.ToActionResult();
+                logger.LogInformation("Getting record ended, for sui:'{Sui}'", sui);
+                if (educationDetailsResult != null)
+                    return Ok(educationDetailsResult);
+                logger.LogInformation("Record not found, for sui:'{Sui}'", sui);
+                break;
+            case "health.details":
+                var healthDetailsResult = await recordService.GetRecord<HealthDataRecord>(
+                    sui,
+                    providerSystemId
+                );
+                logger.LogInformation("Getting record ended, for sui:'{Sui}'", sui);
+                if (healthDetailsResult != null)
+                    return Ok(healthDetailsResult);
+                logger.LogInformation("Record not found, for sui:'{Sui}'", sui);
+                break;
+            case "crime-justice.details":
+                var crimeDetailsResult = await recordService.GetRecord<CrimeDataRecord>(
+                    sui,
+                    providerSystemId
+                );
+                logger.LogInformation("Getting record ended, for sui:'{Sui}'", sui);
+                if (crimeDetailsResult != null)
+                    return Ok(crimeDetailsResult);
+                logger.LogInformation("Record not found, for sui:'{Sui}'", sui);
+                break;
+            case "childrens-services.details":
+                var childrensServicesDetailsResult =
+                    await recordService.GetRecord<ChildrensServicesDetailsRecord>(
+                        sui,
+                        providerSystemId
+                    );
+                logger.LogInformation("Getting record ended, for sui:'{Sui}'", sui);
+                if (childrensServicesDetailsResult != null)
+                    return Ok(childrensServicesDetailsResult);
+                logger.LogInformation("Record not found, for sui:'{Sui}'", sui);
+                break;
+            case "personal.details":
+                var personalDetailsResult = await recordService.GetRecord<PersonalDetailsRecord>(
+                    sui,
+                    providerSystemId
+                );
+                logger.LogInformation("Getting record ended, for sui:'{Sui}'", sui);
+                if (personalDetailsResult != null)
+                    return Ok(personalDetailsResult);
+                logger.LogInformation("Record not found, for sui:'{Sui}'", sui);
+                break;
         }
 
         return NotFound();
