# Apps/StubCustodians/src/SUI.StubCustodians.Application/Models/SearchResultItem.cs
@@ -1,0 +1,8 @@
+namespace SUI.StubCustodians.Application.Models;
+
+public sealed record SearchResultItem(
+    string ProviderSystem,
+    string ProviderName,
+    string RecordType,
+    string RecordUrl
+);
